--- a/step2.html
+++ b/step2.html
@@ -86,8 +86,8 @@
 
 <script>
 let tableData = [];
-const targetCategories = ["Method", "Supplementary", "Description", "Conclusion"];
-
+const targetCategories = ["Method", "Supplementary","Explanation", "Description", "Conclusion"];
+    
 document.getElementById('upload').addEventListener('change', function(e) {
     const file = e.target.files[0];
     if (!file) return;
@@ -175,3 +175,4 @@ function exportToExcel() {
 
 </body>
 </html>
+
