--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                 <th class="col-text">text</th>
                 <th class="col-select">Category</th>
                 <th class="col-select">Type</th>
-                <th class="col-ap">Artifact_Process</th>
+                <th class="col-ap">Artefact_Process</th>
                 <th class="col-action">快捷</th>
             </tr>
         </thead>
@@ -280,3 +280,4 @@ function exportToExcel() {
 </script>
 </body>
 </html>
+
