--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                 <th class="col-text">text</th>
                 <th class="col-select">Category</th>
                 <th class="col-select">Type</th>
-                <th class="col-ap">artefact_Process</th>
+                <th class="col-ap">artefact_process</th>
                 <th class="col-action">快捷</th>
             </tr>
         </thead>
@@ -176,7 +176,6 @@ function renderTable() {
         const tr = document.createElement('tr');
         tr.id = `row-${index}`;
         
-        // 修改：渲染基本資料列
         tr.innerHTML = `
             <td>${row.id || index + 1}</td>
             <td>${row.start_time || ''}</td>
@@ -199,15 +198,15 @@ function renderTable() {
             if (!isTarget) {
                 selectAP.disabled = true;
                 selectAP.innerHTML = '<option value="">-</option>';
-                row.artefact_Process = "";
+                row.artefact_process = "";
                 tr.classList.add('skip-row');
             } else {
                 selectAP.disabled = false;
                 tr.classList.remove('skip-row');
                 selectAP.innerHTML = `
                     <option value="">請選擇</option>
-                    <option value="ARTEFACT" ${row.artefact_Process === 'ARTEFACT' ? 'selected' : ''}>ARTEFACT</option>
-                    <option value="PROCESS" ${row.artefact_Process === 'PROCESS' ? 'selected' : ''}>PROCESS</option>
+                    <option value="ARTEFACT" ${row.artefact_process === 'ARTEFACT' ? 'selected' : ''}>ARTEFACT</option>
+                    <option value="PROCESS" ${row.artefact_process === 'PROCESS' ? 'selected' : ''}>PROCESS</option>
                 `;
             }
         };
@@ -232,7 +231,7 @@ function renderTable() {
         };
 
         selectType.onchange = (e) => { row.Type = e.target.value; };
-        selectAP.onchange = (e) => { row.artefact_Process = e.target.value; };
+        selectAP.onchange = (e) => { row.artefact_process = e.target.value; };
 
         // 初始化狀態 (續標)
         updateTypeOptions(row.Category, row.Type);
@@ -251,7 +250,7 @@ function renderTable() {
                 const prev = tableData[index-1];
                 row.Category = prev.Category;
                 row.Type = prev.Type;
-                row.artefact_Process = prev.artefact_Process;
+                row.artefact_process = prev.artefact_process;
                 renderTable(); 
             };
             tdAction.appendChild(btnSame);
@@ -268,7 +267,7 @@ function renderTable() {
 function exportToExcel() {
     if (tableData.length === 0) return alert("沒有資料");
     const ws = XLSX.utils.json_to_sheet(tableData, {
-        header: ["id", "start_time", "end_time", "text", "Category", "Type", "artefact_Process"]
+        header: ["id", "start_time", "end_time", "text", "Category", "Type", "artefact_process"]
     });
     const wb = XLSX.utils.book_new();
     XLSX.utils.book_append_sheet(wb, ws, "Final_Result");
@@ -277,4 +276,3 @@ function exportToExcel() {
 </script>
 </body>
 </html>
-
