--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="zh-TW">
 <head>
     <meta charset="UTF-8">
-    <title>Transcript Annotation Tool - V5 (High Contrast)</title>
+    <title>Transcript Annotation Tool</title>
     <script src="https://cdn.sheetjs.com/xlsx-latest/package/dist/xlsx.full.min.js"></script>
     <style>
         body { font-family: sans-serif; margin: 20px; background-color: #f4f7f6; color: #000; }
@@ -276,3 +276,4 @@ function exportToExcel() {
 </script>
 </body>
 </html>
+
