--- a/label_v2.html
+++ b/label_v2.html
@@ -81,7 +81,7 @@
                     <span class="definition-term">artefact(general) :</span> 僅開啟文字輸入框，不需選取 Move/Step
                 </div>
                 <div class="definition-box">
-                    <span class="definition-term">process :</span> 不開放細節填寫
+                    <span class="definition-term">process :</span> 無須進行下一步驟
                 </div>
             </div>
 
@@ -346,4 +346,5 @@ function exportToExcel() {
 }
 </script>
 </body>
+
 </html>
